# draftkit

./: .gitignore  README.md  README.md.backup  pyproject.toml  pyproject.toml.test  requirements.txt  roadmap.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
config/: league-settings-dst.example.yml  league-settings-kicker.example.yml  league-settings.example.yml  league-settings.yml
data_cache/: dst_rosters_2022.parquet  dst_rosters_2023.parquet  dst_rosters_2024.parquet  dst_weekly_2022.parquet  dst_weekly_2023.parquet  dst_weekly_2024.parquet  kicker_rosters_2022.parquet  kicker_rosters_2023.parquet  kicker_rosters_2024.parquet  kicker_weekly_2022.parquet  kicker_weekly_2023.parquet  kicker_weekly_2024.parquet  rosters_2022.parquet  rosters_2023.parquet  rosters_2024.parquet  weekly_2022.parquet  weekly_2023.parquet  weekly_2024.parquet
docs/: CONTRIBUTING.md  PR_BODY_INITIAL.md  README.md  dashboard_roadmap.md  roadmap.md
draftkit-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
public/: players.json
test_debug/: meta.json  players.json
test_debug_3year/: meta.json
test_debug_mingames1/: meta.json  players.json
test_dst/: meta.json  players.json
test_kicker/: meta.json  players.json
test_new_config/: meta.json
test_onesie/: meta.json  players.json
test_output/: players.json
test_output_2025/: players.json
test_output_no_cache/: meta.json
tests/: test_cli.py  test_dst.py  test_kicker.py  test_main.py  test_nflverse.py  test_schedule.py  test_scoring.py  test_tiers.py
(+38 files in other folders)
